--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     </div>
 </div>
 <h3>Latest Articles</h3>
-<div class="mt-5 list-group">
+<div class="my-5 list-group">
     {% for post in site.posts %}
     <a href="{{ site.baseurl }}{{ post.url }}" class="list-group-item list-group-item-action">
         <div class="d-flex">
