Fix width issue on image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     {% for post in site.posts %}
     <a href="{{ site.baseurl }}{{ post.url }}" class="list-group-item list-group-item-action">
         <div class="d-flex">
-            <img height="40" width="40" src="{{ site.baseurl }}/images/default-logo.jpg">
+            <img style="min-width: 40px" height="40" width="40" src="{{ site.baseurl }}/images/default-logo.jpg">
             <div class="ml-3">
                 <h5 class="">{{ post.title }}</h5>
                 <small class="text-muted">
